# SynapseSync

./: .gitignore  README.md  arborescence.md
backend/: .env.example  alembic.ini  app.py  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_events.py  0002_create_dashboards.py  0003_create_module_configs.py
backend/src/synapsesync/: __init__.py  main.py
backend/src/synapsesync/api/: __init__.py  router.py
backend/src/synapsesync/api/endpoints/: __init__.py  dashboards.py  modules.py  widgets.py
backend/src/synapsesync/core/: __init__.py  config.py  database.py  discovery.py  models.py
backend/src/synapsesync/modules/: __init__.py
backend/src/synapsesync/modules/common/: __init__.py  interfaces.py
backend/src/synapsesync/modules/github/: __init__.py  module.py
docs/: README.md  api.md  architecture.md  backend.md  database_migrations.md  dev_workflow.md  frontend.md  modules_widgets.md  troubleshooting.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  synapsesync.ts
frontend/src/pages/: DashboardPage.tsx  ModulesPage.tsx
frontend/src/widgets/: CounterWidget.tsx  PieWidget.tsx  TimelineWidget.tsx  registry.tsx
scripts/: smoke_test_github_config.sh
