[project]
name = "synapsesync"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "apscheduler>=3.10",
  "httpx>=0.27",
]

[project.entry-points."synapsesync.modules"]
github = "synapsesync.modules.github.module:GitHubModule"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
